feat: add transformations

--- a/app/globals.css
+++ b/app/globals.css
@@ -320,7 +320,7 @@
   }
 
   .sidebar-nav {
-    @apply h-full  flex-col justify-between md:flex md:gap-4;
+    @apply h-[98%] py-4 flex-col justify-between md:flex md:gap-4;
   }
 
   .sidebar-nav_elements {
@@ -328,11 +328,11 @@
   }
 
   .sidebar-nav_element {
-    @apply flex-center p-16-semibold w-full  whitespace-nowrap rounded-md bg-cover  transition-all ;
+    @apply flex-center  w-full  whitespace-nowrap rounded-md bg-cover  transition-all ;
   }
 
   .sidebar-link {
-    @apply p-16-semibold flex size-full gap-4 md:p-4;
+    @apply  flex size-full gap-4 md:p-4;
   }
 
   /* TransformationForm Component */
