--- a/app/globals.css
+++ b/app/globals.css
@@ -193,7 +193,7 @@
   }
 
   .submit-button {
-    @apply bg-purple-gradient bg-cover rounded-md py-4 px-6 p-16-semibold h-[50px] w-full md:w-fit md:h-[54px];
+    @apply bg-purple-gradient dark:bg-purplegardient dark:text-slate-300 bg-cover rounded-md py-4 px-6 p-16-semibold h-[50px] w-full md:w-fit md:h-[54px];
   }
 
   .select-field {
